changes/4.14/5904c9d3c9bd52f79718d1806175271b4bd20718
spi: imx: fix little-endian build

The newly added dynamic burst code produces a harmless warning
on big-endian configurations:

drivers/spi/spi-imx.c: In function 'spi_imx_buf_rx_swap_u32':
drivers/spi/spi-imx.c:284:15: error: unused variable 'bytes_per_word' [-Werror=unused-variable]
  unsigned int bytes_per_word;
               ^~~~~~~~~~~~~~
drivers/spi/spi-imx.c: In function 'spi_imx_buf_tx_swap_u32':
drivers/spi/spi-imx.c:319:15: error: unused variable 'bytes_per_word' [-Werror=unused-variable]
  unsigned int bytes_per_word;

This adds another #ifdef around the variable declaration matching
the one on the use.

Fixes: 1673c81d9435 ("spi: imx: dynamic burst length adjust for PIO mode")
Signed-off-by: Arnd Bergmann <arnd@arndb.de>
Signed-off-by: Mark Brown <broonie@kernel.org>

